--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "devDependencies": {
     "@babel/cli": "7.1.0",
     "@babel/core": "7.1.0",
-    "@babel/plugin-transform-react-jsx": "7.0.0"
+    "@babel/plugin-transform-react-jsx": "7.0.0",
+    "@babel/register": "7.0.0",
+    "diff": "^3.5.0"
   }
 }
