--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,7 @@
 {
     "plugins": [
-        "@babel/plugin-transform-react-jsx"
+        ["@babel/plugin-transform-react-jsx", {
+            "pragma": "JSXTemplates"
+          }]
     ]
 }
